--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,31 @@
 # Configuration Variables Template
-# https://www.ibm.com/docs/en/wm-integration-server/11.1.0?topic=guide-configuration-variables-template-assets
+# https://www.ibm.com/docs/en/webmethods-integration/wm-integration-server/11.1.0?topic=guide-configuration-variables-template-assets
 
 # JMS & JNDI config
 jms.DEFAULT_IS_JMS_CONNECTION.enabled=true
 jms.DEFAULT_IS_JMS_CONNECTION.csqSize=0
 jms.DEFAULT_IS_JMS_CONNECTION.jndi_automaticallyCreateUMAdminObjects=true
 jndi.DEFAULT_IS_JNDI_PROVIDER.providerURL=nsp://um:9000
+
+# Adapters
+# https://www.ibm.com/docs/en/webmethods-integration/all?topic=runtime-adapter-specific-samples
+
+# Extended Settings
+# https://www.ibm.com/docs/en/webmethods-integration/wm-integration-server/11.1.0?topic=guide-server-configuration-parameters
+settings.watt.net.timeout=60
+settings.watt.server.audit.logFilesToKeep=7
+settings.watt.server.audit.logRotateSize=20MB
+settings.watt.server.clientTimeout=5
+settings.watt.server.dateStampFmt=yyyy-MM-dd HH:mm:ss.SSSXXX
+settings.watt.server.diagnostic.threadDumper=false
+settings.watt.server.http.returnException=false
+settings.watt.server.log.alertMaxEntries=5000
+settings.watt.server.log.maxEntries=500
+settings.watt.server.math.floatOperation.mode=dynamic
+settings.watt.server.ns.hideWmRoot=false
+settings.watt.server.serverlogFilesToKeep=7
+settings.watt.server.serverlogRotateSize=20MB
+settings.watt.server.stats.logFilesToKeep=7
+settings.watt.server.stats.logRotateSize=20MB
+settings.watt.server.threadKill.interruptThread.enabled=true
+settings.watt.server.threadPool=500
